# ghost

./: .gitignore  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  models.txt  output.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yml
launchd/: com.advait.hermes-pii-scrubber.plist  com.advait.hermes-proxy.plist  com.advait.hermes-veil.plist
privacy/: chat_auth.py  chat_login.py  ensure_scrubber_route.py  gen_searxng_settings.py  ohttp_client.py  presidio_scrub.py  rotating_proxy.py  scrub_patterns.py  scrubbing_proxy.py
profile/: .env.example  SOUL.md  config.yaml  pii_denylist.example.txt  uncensored_prefill.json
scripts/: debrand.py  fork-engine.ps1  fork-engine.sh
systemd/: ghost-scrubber.service  ghost-veil.service
tests/: test_scrub.py
