# ghost's privacy stack, declared as a standard PEP 621 project. The installer provisions an
# isolated virtualenv from this with `uv` (which also fetches CPython 3.11 if the machine only
# has an older python -- e.g. Apple's system 3.9), so installs are reproducible and never touch
# the system interpreter. `package = false` means uv installs the dependencies into the venv
# without trying to build/install ghost itself (the privacy scripts are run by path from
# ~/.ghost/privacy, not imported as a distribution).
[project]
name = "ghost-privacy"
version = "0.1.0"
description = "ghost's local privacy stack: the PII/secret scrubbing bridge + og-veil (OHTTP/TEE) transport"
requires-python = ">=3.11"
dependencies = [
    # og-veil owns the load-bearing OHTTP/HPKE/TEE-verify boundary -- pinned so a re-install
    # can't silently change the verification protocol. Bump deliberately.
    "opengradient-veil>=0.2.8,<0.3",
    # The SDK's TEE_LLM enum is what `og-veil models` reports; 1.1.1 adds deepseek-v4-pro.
    "opengradient>=1.1.1",
    # The scrubbing bridge forwards to og-veil's local server.
    "httpx>=0.27",
]

[project.optional-dependencies]
# NER-based PII scrubbing. Only installed/used when redaction is opted into (GHOST_SCRUB /
# ghost --scrub); the default full-fidelity mode never loads it.
presidio = [
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy",
]

[tool.uv]
package = false
